@@ -7,7 +7,7 @@
     <groupId>cn.octopusyan</groupId>
     <artifactId>dmt</artifactId>
     <version>0.1.2</version>
-    <name>dmt</name>
+    <name>DayzModTranslator</name>
 
     <organization>
         <name>octopus_yan</name>
@@ -239,33 +239,33 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <stripDebug>true</stripDebug>
-                    <compress>2</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    <launcher>launcher</launcher>
-                    <jlinkImageName>app</jlinkImageName>
-                    <jlinkZipName>app</jlinkZipName>
-                    <mainClass>cn.octopusyan.dmt/${exec.mainClass}</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <options>
-                                <option>--enable-preview</option>
-                                <option>${debug.option}</option>
-                            </options>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.openjfx</groupId>-->
+<!--                <artifactId>javafx-maven-plugin</artifactId>-->
+<!--                <version>0.0.8</version>-->
+<!--                <configuration>-->
+<!--                    <stripDebug>true</stripDebug>-->
+<!--                    <compress>2</compress>-->
+<!--                    <noHeaderFiles>true</noHeaderFiles>-->
+<!--                    <noManPages>true</noManPages>-->
+<!--                    <launcher>launcher</launcher>-->
+<!--                    <jlinkImageName>app</jlinkImageName>-->
+<!--                    <jlinkZipName>app</jlinkZipName>-->
+<!--                    <mainClass>cn.octopusyan.dmt/${exec.mainClass}</mainClass>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        &lt;!&ndash; Default configuration for running with: mvn clean javafx:run &ndash;&gt;-->
+<!--                        <id>default-cli</id>-->
+<!--                        <configuration>-->
+<!--                            <options>-->
+<!--                                <option>&#45;&#45;enable-preview</option>-->
+<!--                                <option>${debug.option}</option>-->
+<!--                            </options>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>io.github.fvarrui</groupId>
